# lords-of-the-realm-2-parser

./: .gitignore  LICENSE  README.md  asdff  duo-list.json  package.yaml  stack.yaml
app/: Main.hs
c-version/: CMakeLists.txt
c-version/src/: duo.h  image.cpp  image.h  main.cpp  pallet.cpp  pallet.h  pl8.cpp  pl8.h  tile.h
rust/: Cargo.toml
rust/src/: duo.rs  main.rs  pallet.rs  pl8.rs
src/: Lords.hs  Main.hs  Utils.hs
src/Lords/: Duo.hs  PalletMap.hs
src/Lords/PL8/: Parser.hs  Types.hs
src/Lords/Pallet/: Parser.hs  Types.hs
