[package]
name = "lords-or-realms-2"
version = "0.1.0"
authors = ["Jan Sipr <sipr.jan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
png = "0.17.7"
serde_json = "1.0.94"
serde = "1.0.154"
rayon = "*"
